--- a/standart_setup.yaml
+++ b/standart_setup.yaml
@@ -66,7 +66,5 @@ right:
     pitch: -1.57
     yaw: 0.0
 
-# head sensor configuration
-# head:
-#   camera:
-#   camera_pose:
+# Fixed cameras
+fixed_cameras_file: "fixed_cameras/my_test.yaml"
