Simplify model : remove camera orientation and model it as a cylinder

--- a/fixed_cameras/example.yaml
+++ b/fixed_cameras/example.yaml
@@ -1,14 +1,10 @@
 - size: &realsense_size # Dimensions with 1.25 cm margin all around
-    x: 0.12
-    y: 0.04
-    z: 0.04
-  pose:
+    width: 0.12
+    height: 0.04
+  position:
     x: 0
     y: 0.45
     z: 0.35
-    roll: 0
-    pitch: 0
-    yaw: 0
   fixture_orientation: "+y"
   offset: # From fixture tip to camera optical frame offset
     x: 0.045
@@ -16,13 +12,10 @@
     z: 0.08
 
 - size: *realsense_size
-  pose:
+  position:
     x: -0.45
     y: -0.9
     z: 0.35
-    roll:  0
-    pitch: 0
-    yaw:   0
   fixture_orientation: "-y"
   offset: # From fixture tip to camera optical frame offset
     x: -0.045
@@ -30,13 +23,10 @@
     z: 0.08
 
 - size: *realsense_size
-  pose:
+  position:
     x: 1.2
     y: 0.1
     z: 0.45
-    roll: 0
-    pitch: 0
-    yaw: 1.5
   fixture_orientation: "+x"
   offset: # From fixture tip to camera optical frame offset
     x: -0.045
@@ -44,13 +34,10 @@
     z: 0.08
 
 - size: *realsense_size
-  pose:
+  position:
     x: -1.2
     y: 0.1
     z: 0.20
-    roll: 0
-    pitch: 0
-    yaw: -1.5
   fixture_orientation: "-x"
   offset: # From fixture tip to camera optical frame offset
     x: -0.045
