--- a/standart_setup.yaml
+++ b/standart_setup.yaml
@@ -67,4 +67,4 @@ right:
     yaw: 0.0
 
 # Fixed cameras
-fixed_cameras_file: "fixed_cameras/example.yaml"
+# fixed_cameras_file: "fixed_cameras/example.yaml"
