--- a/standart_setup.yaml
+++ b/standart_setup.yaml
@@ -3,40 +3,12 @@ left:
   arm_kinematics: "kinematics/ur5_left.yaml"
   arm_joint_limits: "limits/half_joint_limits.yaml"
   arm_pose:
-    x: -0.17906
-    y: 0.0
-    z: 0.78936
-    roll: 0.0
-    pitch: -2.356194490192345
-    yaw: 0.0
-  gripper: "onrobot-rg6"
-  gripper_pose:
-    x: 0.0
-    y: 0.0
-    z: 0.0
-    roll: 0.0
-    pitch: 0.0
-    yaw: 0.0
-  camera: "realsense-d435i"
-  camera_pose:
-    x: 0.0
-    y: 0.02
-    z: 0.15
-    roll: -1.57
-    pitch: -1.57
-    yaw: 0.0
-
-# right arm configuration
-right:
-  arm_kinematics: "kinematics/ur5_right.yaml"
-  arm_joint_limits: "limits/half_joint_limits.yaml"
-  arm_pose:
-    x: 0.17906
-    y: 0.0
-    z: 0.78936
-    roll: 0.0
-    pitch: 2.356194490192345
-    yaw: 0.0
+    x: -0.1788041506801779
+    y: 0.0012851179536986224
+    z: 0.790690601391236
+    roll: -3.1326812307651792
+    pitch: -0.7807533720416843
+    yaw: 3.128084943639606
   gripper: "onrobot-rg2"
   gripper_pose:
     x: 0.0
@@ -53,6 +25,34 @@ right:
     roll: -1.57
     pitch: -1.57
     yaw: 0.0
+
+# right arm configuration
+right:
+  arm_kinematics: "kinematics/ur5_right.yaml"
+  arm_joint_limits: "limits/half_joint_limits.yaml"
+  arm_pose:
+    x: 0.17906
+    y: 0.0
+    z: 0.78936
+    roll: 0.0
+    pitch: 2.356194490192345
+    yaw: 0.0
+  # gripper: "onrobot-rg2"
+  # gripper_pose:
+  #   x: 0.0
+  #   y: 0.0
+  #   z: 0.0
+  #   roll: 0.0
+  #   pitch: 0.0
+  #   yaw: 0.0
+  # camera: "realsense-d435i"
+  # camera_pose:
+  #   x: 0.0
+  #   y: 0.01
+  #   z: 0.13
+  #   roll: -1.57
+  #   pitch: -1.57
+  #   yaw: 0.0
 
 # Fixed cameras
 fixed_cameras_file: "fixed_cameras/dataset_collection.yaml"
