--- a/config/standart_setup.yaml
+++ b/config/standart_setup.yaml
@@ -10,7 +10,7 @@ left:
     pitch: -0.7832185966785736
     yaw: 3.1383051269108933
 
-  gripper: "onrobot-rg6"
+  gripper: "onrobot-rg6-v2"
   gripper_controller: "onrobot_rg"
   gripper_pose:
     x: 0.0
