--- a/config/fixed_cameras/dataset_collection.yaml
+++ b/config/fixed_cameras/dataset_collection.yaml
@@ -1,49 +1,33 @@
-- type: 'realsense-d435i'
-  name_prefix: bravo
-  bounding_box: &realsense_size
-    width: 0.35
-    height: 0.30
-  pose:
-    x: -0.486534
-    y: 0.70895
-    z: 0.398287
-    roll:  -1.931
-    pitch: 0.014
-    yaw:   -3.121
-  fixture_orientation: "+y"
-  offset: # From fixture tip to camera optical frame offset
-    x: 0.03
-    y: 0.01
-    z: 0.08
+# - type: 'realsense-d435i'
+#   name_prefix: bravo
+#   bounding_box: &realsense_size
+#     width: 0.35
+#     height: 0.30
+#   pose:
+#     x: -0.486534
+#     y: 0.70895
+#     z: 0.398287
+#     roll:  -1.931
+#     pitch: 0.014
+#     yaw:   -3.121
+#   fixture_orientation: "+y"
+#   offset: # From fixture tip to camera optical frame offset
+#     x: 0.03
+#     y: 0.01
+#     z: 0.08
 
-- type: 'realsense-d435i'
-  name_prefix: charlie
-  bounding_box: *realsense_size
-  pose:
-    x: -1.199518
-    y: 0.003458
-    z: 0.400626
-    roll:  -2.095
-    pitch: -0.006
-    yaw:   -1.550
-  fixture_orientation: "-x"
-  offset: # From fixture tip to camera optical frame offset
-    x: -0.01
-    y: 0.04
-    z: 0.08
-
-- type: 'realsense-d435i'
-  name_prefix: alpha
-  bounding_box: *realsense_size
-  pose:
-    x: 0.519320
-    y: 0.574305
-    z: 0.574076
-    roll:  -2.278
-    pitch: -0.000
-    yaw:   3.127
-  fixture_orientation: "+y"
-  offset: # From fixture tip to camera optical frame offset
-    x: 0.00
-    y: -0.03
-    z: 0.07
+# - type: 'realsense-d435i'
+#   name_prefix: charlie
+#   bounding_box: *realsense_size
+#   pose:
+#     x: -1.199518
+#     y: 0.003458
+#     z: 0.400626
+#     roll:  -2.095
+#     pitch: -0.006
+#     yaw:   -1.550
+#   fixture_orientation: "-x"
+#   offset: # From fixture tip to camera optical frame offset
+#     x: -0.01
+#     y: 0.04
+#     z: 0.08
