--- a/package.xml
+++ b/package.xml
@@ -12,11 +12,12 @@
   <url type="repository">https://github.com/inria-paris-robotics-lab/prl_ur5_robot_configuration</url>
   <url type="bugtracker">https://github.com/inria-paris-robotics-lab/prl_ur5_robot_configuration/issues</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
-  <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <!-- Other tools can request additional information be placed here -->
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
