--- a/config/limits/half_joint_limits.yaml
+++ b/config/limits/half_joint_limits.yaml
@@ -1,5 +1,5 @@
 joint_limits:
-  shoulder_pan:
+  shoulder_pan_joint:
     # acceleration limits are not publicly available
     has_acceleration_limits: false
     has_effort_limits: true
@@ -9,7 +9,7 @@ joint_limits:
     max_position: !degrees  180.0
     max_velocity: !degrees  180.0
     min_position: !degrees -180.0
-  shoulder_lift:
+  shoulder_lift_joint:
     # acceleration limits are not publicly available
     has_acceleration_limits: false
     has_effort_limits: true
@@ -29,7 +29,7 @@ joint_limits:
     max_position: !degrees  180.0
     max_velocity: !degrees  180.0
     min_position: !degrees -180.0
-  wrist_1:
+  wrist_1_joint:
     # acceleration limits are not publicly available
     has_acceleration_limits: false
     has_effort_limits: true
@@ -39,7 +39,7 @@ joint_limits:
     max_position: !degrees  180.0
     max_velocity: !degrees  180.0
     min_position: !degrees -180.0
-  wrist_2:
+  wrist_2_joint:
     # acceleration limits are not publicly available
     has_acceleration_limits: false
     has_effort_limits: true
@@ -49,7 +49,7 @@ joint_limits:
     max_position: !degrees  180.0
     max_velocity: !degrees  180.0
     min_position: !degrees -180.0
-  wrist_3:
+  wrist_3_joint:
     # acceleration limits are not publicly available
     has_acceleration_limits: false
     has_effort_limits: true
