--- a/config/standart_setup.yaml
+++ b/config/standart_setup.yaml
@@ -10,23 +10,29 @@ left:
     pitch: 0
     yaw: 0
 
-  gripper: "onrobot-rg6-v2"
-  gripper_controller: "onrobot_rg"
+  gripper: "weiss-wsg50"
+  gripper_controller: "weiss-gripper"
   gripper_pose:
     x: 0.0
     y: 0.0
-    z: 0.0
+    z: 0.01
     roll: 0.0
     pitch: 0.0
     yaw: 0.0
-  camera: "realsense-d435i"
-  camera_pose:
-    x: -1.8195086181012343e-05
-    y: 0.021319877717104876
-    z: 0.17293318092151708
-    roll: 0.2835816306216423
-    pitch: -1.5613233179664476
-    yaw: -1.8675144444458067
+  # camera: "realsense-d435i"
+  # camera_pose:
+  #   x: -1.8195086181012343e-05
+  #   y: 0.021319877717104876
+  #   z: 0.17293318092151708
+  #   roll: 0.2835816306216423
+  #   pitch: -1.5613233179664476
+  #   yaw: -1.8675144444458067
+  network:
+    ip: "192.168.56.101"
+    script_command_port: "50005"
+    reverse_port: "50001"
+    script_sender_port: "50002"
+    trajectory_port: "50004"
 
 
 # right arm configuration
@@ -40,14 +46,12 @@ right:
     roll: 0.0
     pitch: 0
     yaw: 0.0
-  # gripper: "custom:cylinder_tool"
-  # gripper_controller: "None"
-  gripper: "allegro-hand:right"
-  gripper_controller: "allegro-hand"
+  gripper: "weiss-wsg50"
+  gripper_controller: "weiss-gripper"
   gripper_pose:
     x: 0.0
     y: 0.0
-    z: 0.0
+    z: 0.01
     roll: 0.0
     pitch: 0.0
     yaw: 0.0
@@ -59,6 +63,12 @@ right:
   #   roll: -1.57
   #   pitch: -1.57
   #   yaw: 0.0
+  network:
+    ip: "192.168.56.202"
+    script_command_port: "50010"
+    reverse_port: "50006"
+    script_sender_port: "50007"
+    trajectory_port: "50009"
 
 # Fixed cameras
 fixed_cameras_file: "fixed_cameras/dataset_collection.yaml"
